fixed overflow title

--- a/src/main/webapp/css/bids/bids.css
+++ b/src/main/webapp/css/bids/bids.css
@@ -67,6 +67,7 @@
     color: #0087E9;
     overflow: hidden;
     text-overflow: ellipsis;
+    overflow-wrap: anywhere;
 
     border-bottom: 2px solid #0087E9;
     flex-grow: 1;
